tests/ui/coherence/coherence-pair-covered-uncovered-1.stderr
error[E0117]: only traits defined in the current crate can be implemented for primitive types
  --> $DIR/coherence-pair-covered-uncovered-1.rs:12:1
   |
LL | impl<T, U> Remote1<Pair<T, Local<U>>> for i32 { }
   | ^^^^^^^^^^^--------------------------^^^^^---
   |            |                              |
   |            |                              `i32` is not defined in the current crate
   |            `Pair` is not defined in the current crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0117`.
